--- a/configuration/config.json
+++ b/configuration/config.json
@@ -1,28 +1,2 @@
-{"names": ["┌∩┐(◣_◢)┌∩┐",
-  "Ƹ̵̡Ӝ̵̨̄Ʒ",
-  "┌(-_-)=ε/̵͇̿̿/’̿’̿ ̿",
-  "ι αм ƒαη¢у!",
-  "( ͡° ͜ʖ ͡°)",
-  "( ͡°( ͡° ͜ʖ(O)ʖ ͡°) ͡°)",
-  "(っˆڡˆς)",
-  "o()xx[{:::::::>",
-  "Yᵒᵘ Oᶰˡʸ Lᶤᵛᵉ Oᶰᶜᵉ",
-  "(╯°□°)╯",
-  "ᕦ( ͡° ͜ʖ ͡°)ᕤ",
-  "/̵͇̿̿/’̿’̿ ̿",
-  "[̲̅$̲̅(̲̅ ͡° ͜ʖ ͡°̲̅)̲̅$̲̅]",
-  "♪┏(°.°)┛",
-  "=ε︻╦̵̵͇̿̿̿̿ ╤───",
-  "︻╦̵̵͇̿̿̿̿╤─── ",
-  "♛ ♕ ♚ ♔ ♜ ♖ ♝ ♗ ♞ ♘ ♟ ♙",
-  "[̲̅$̲̅(̲̅ιοο̲̅)̲̅$̲̅]",
-  "/̵͇̿̿/'̿̿ ̿̿ ̿̿ ",
-  "ဗီူဗီူ ဗီူဗီူ",
-  "╾━╤デ╦︻",
-  "︻デ═一",
-  "(⌐■_■)--︻╦╤─",
-  "(╯°□°)-︻╦╤─",
-  "(ง •̀_•́)ง",
-  "┣▇▇▇═─",
-  "(☞ﾟヮﾟ)☞"],
+{"path_to_names": "./configuration/names.json",
   "question_timeout": 90}
